NAS-108660 Handle long output and avoid horizontal scrollbar

--- a/src/app/pages/common/info-dialog/info-dialog.component.scss
+++ b/src/app/pages/common/info-dialog/info-dialog.component.scss
@@ -1,11 +1,11 @@
 .info-panel {
-    max-height: 115px !important;
+    max-height: 65vh !important;
 
     span {
       display: block;
       unicode-bidi: embed;
       font-family: monospace;
-      white-space: pre;
+      white-space: pre-line;
     }
 }
 
